created a main css file and created a normalize css file in a newly created styles folder. Also, an index html folder was created. All files have also been modified

--- a/index.html
+++ b/index.html
@@ -2,41 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="author" content="Fried Rice Recipe">
-  <title>Fried Rice</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Isaac's Portfolio</title>
+  <link rel="stylesheet" href="styles/main.css" type="text/css">
 </head>
 <body>
-  <h1> Fried Rice </h1>
-  <h2> Ingredients </h2>
-  <p>
-    <ul>
-      <li>6 cups of cooked rice</li>
-      <li>1/4 cup of canola oil</li>
-      <li>1 medium-sized onion</li>
-      <li>1/2 pound of liver cut (bite sized)</li>
-      <li>1 pond of large shrimps (peeled and deveined)</li>
-      <li>1 teaspoon of pepper sauce/chili sauce</li>
-      <li>1/2 teaspoon of dried thyme</li>
-      <li>1 teaspoon of white pepper</li>
-      <li>1 teaspoon curry powder</li>
-      <li>1 block of chicken stock</li>
-      <li>1 tablespoon of soy sauce</li>
-      <li>salt to taste</li>
-      <li>12-16 oz vegetables peas, carrots, green peas</li>
-    </ul>
-  </p>
-  <h2> Preperation </h2>
-  <p>
-    <ol>
-      <li>Break up the clumpy rice before starting</li>
-      <li>Heat a large wok or skillet on medium high heat with about a tablespoon of canola or vegetable oil</li>
-      <li>Add the rice stir vigorously for about 2-3 minutes adding Maggie liquid and a tablespoon or more of water or chicken/beef stock as need to moistened rice. Set aside. Quickly wipe the wok or skillet with a clean paper towel or cloth</li>
-      <li>Heat 1teaspoon oil in the wok; add shrimp, lightly seasoned with salt. Sauté until just cooked through. Remove add to the fried rice</li>
-      <li>Next add another tablespoon of oil, let it heat up, then add the liver or beef lightly season with salt and pepper , quickly stir fry for about a 2 minutes. Remove and add to the rice. Quickly wipe the wok or skillet with a clean paper towel or cloth</li>
-      <li>Then add a tablespoon of oil into the wok, followed by onions, thyme, garlic ,peas, carrots, pepper sauce,white pepper, curry powder, and chicken bouillon powder. Stir until fragrant for about 2 minutes</li>
-      <li>Finally return the combination of rice, liver, and shrimp to the wok. Stir until everything has been fully combined. Adjust seasoning salt, pepper if necessary</li>
-      <li>Garnish with chopped scallion and serve</li>
-    </ol>
-  </p>
+  <div class="wrapper">
+
+    <header class="site-header">
+      <nav class="site-navigation">
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+
+      <h1 class="main-title">Itamar's Portfolio</h1>
+    </header>
+  </div>
+
 </body>
 </html>
