--- a/index.html
+++ b/index.html
@@ -8,20 +8,47 @@
   <link rel="stylesheet" href="styles/main.css" type="text/css">
 </head>
 <body>
-  <div class="wrapper">
-
-    <header class="site-header">
+    <div class="wrapper">
+     <header class="site-header">
       <nav class="site-navigation">
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Contact</a></li>
         </ul>
       </nav>
-
-      <h1 class="main-title">Itamar's Portfolio</h1>
+  <!--  <h1 class="main-title">Isaac's Portfolio</h1> -->
     </header>
   </div>
-
+<main>
+   <section>
+      <h2>Welcome</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+   </section>
+   <aside>
+     <h3>Projects</h3>
+     <nav class="aside-navigation">
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+     </nav>
+    </aside>
+  </main>
+  <footer>
+    <nav class="footer-navigation">
+      <ul>
+        <li>email</li>
+        <li>facebook</li>
+        <li>twitter</li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 </html>
