--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
      <h3>Projects</h3>
      <nav class="aside-navigation">
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li><a href="">Air Training Corps</a></li>
+          <li><a href="">Stockport medical Education Centre</a></li>
+          <li><a href="">UK Civil Service</a></li>
         </ul>
      </nav>
     </aside>
@@ -44,9 +44,9 @@
   <footer>
     <nav class="footer-navigation">
       <ul>
-        <li>email</li>
-        <li>facebook</li>
-        <li>twitter</li>
+        <li><a href="">email</a></li>
+        <li><a href="">facebook</a></li>
+        <li><a href="">twitter</a></li>
       </ul>
     </nav>
   </footer>
