--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
      <header class="site-header">
       <nav class="site-navigation">
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -44,7 +44,7 @@
        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
-     <nav>
+     <nav class="hobbies-navigation">
        <ul>
          <li>Sciences</li>
          <li>Space</li>
