--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
      <header class="site-header">
       <nav class="site-navigation">
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
   <!--  <h1 class="main-title">Isaac's Portfolio</h1> -->
