inputed the links to external resources to each page

--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,9 @@
   <footer>
     <nav class="footer-navigation">
       <ul>
-        <li><a href="">email</a></li>
-        <li><a href="">facebook</a></li>
-        <li><a href="">twitter</a></li>
+        <li><a href="mailto:giwaisaac@hotmail.com" target="hotmail">email</a></li>
+        <li><a href="https://www.facebook.com/nasir.isaac" target="facebook">facebook</a></li>
+        <li><a href="https://twitter.com/IsaacVeeG" target="twitter">twitter</a></li>
       </ul>
     </nav>
   </footer>
