--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
      <h3>Projects</h3>
      <nav class="aside-navigation">
         <ul>
-          <li><a href="">Air Training Corps</a></li>
-          <li><a href="">Stockport medical Education Centre</a></li>
-          <li><a href="">UK Civil Service</a></li>
+          <li><a href="https://www.raf.mod.uk/aircadets/" target="raf">Air Training Corps</a></li>
+          <li><a href="https://www.stockport.nhs.uk/" target="nhs">Stockport Medical Education Centre</a></li>
+          <li><a href="https://www.gov.uk/government/organisations/civil-service" target="UKCivilService">UK Civil Service</a></li>
         </ul>
      </nav>
     </aside>
@@ -44,9 +44,9 @@
   <footer>
     <nav class="footer-navigation">
       <ul>
-        <li><a href="">email</a></li>
-        <li><a href="">facebook</a></li>
-        <li><a href="">twitter</a></li>
+        <li><a href="mailto:giwaisaac@hotmail.com" target="hotmail">email</a></li>
+        <li><a href="https://www.facebook.com/nasir.isaac" target="facebook">facebook</a></li>
+        <li><a href="https://twitter.com/IsaacVeeG" target="twitter">twitter</a></li>
       </ul>
     </nav>
   </footer>
