added label and input to the contact html file. Created a new contact css file, and added styling to it

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Isaac's Portfolio</title>
   <link rel="stylesheet" href="styles/main.css" type="text/css">
+  <link rel="stylesheet" href="styles/contact.css">
 </head>
 <body>
     <div class="wrapper">
@@ -22,6 +23,27 @@
 <main>
    <section>
       <h3>contact form</h3>
+      <form action="">
+      <label for="firstname">name</label>
+      <input type="text" name="Name" autofocus><br>
+      <br>
+      <label for="firstname">e-mail</label>
+      <input type="text" name="e-mail" autofocus><br>
+      <br>
+
+      <label for="firstname">subject</label>
+      <input type="text" name="subject" autofocus><br>
+      <br>
+
+      <label for="message">your message</label><br>
+      <br>
+      <textarea name="message" placeholder="please write your message here"></textarea><br>
+      <br>
+      <input type="checkbox" Name="news" checked>
+      <label for="news"> newsletter subscription</label><br>
+      <br>
+      <input type="submit" value="submit">
+  </form>
    </section>
 
    <aside>
