created an image folder and added 3 images in it. Styled contact html using the contact css.

--- a/contact.html
+++ b/contact.html
@@ -21,41 +21,66 @@
     </header>
   </div>
 <main>
-   <section>
-      <h3>contact form</h3>
+    <h1 class="h1">CONTACT</h1>
+    <section class="info">
+    <h3 class="h3">INFORMATION</h3>
+    <p>
+      154 Northmoor Road,<br>
+      M12 5RS, Manchester.<br>
+      +44 7856484953 <br>
+      /info@caramel.co.uk
+    </p>
+
+  </section>
+   <section class="contact-form1">
+      <h3>CONTACT FORM</h3>
       <form action="">
-      <label for="firstname">name</label>
-      <input type="text" name="Name" autofocus><br>
+
+      <!-- <label for="firstname">name</label> -->
+      <input type="text" name="Name" placeholder="FIRST NAME&#42;" autofocus><br>
       <br>
-      <label for="firstname">e-mail</label>
-      <input type="text" name="e-mail" autofocus><br>
+      <!-- <label for="firstname">e-mail</label> -->
+      <input type="text" name="e-mail" placeholder="EMAIL ADDRESS&#42;" autofocus><br>
       <br>
 
-      <label for="firstname">subject</label>
-      <input type="text" name="subject" autofocus><br>
-      <br>
+      <!-- <label for="firstname">subject</label> -->
 
-      <label for="message">your message</label><br>
-      <br>
-      <textarea name="message" placeholder="please write your message here"></textarea><br>
-      <br>
-      <input type="checkbox" Name="news" checked>
+      <!-- <label for="message">your message</label><br> -->
+
+      <!--<input type="checkbox" Name="news" checked>
       <label for="news"> newsletter subscription</label><br>
-      <br>
-      <input type="submit" value="submit">
+      <br> -->
+
   </form>
    </section>
 
-   <aside>
-     <h3>contact info</h3>
-   </aside>
+   <section class="contact-form2">
+     <form action="">
+     <input type="text" name="Name" placeholder="LAST NAME&#42;" autofocus><br>
+     <br>
+     <input type="text" name="country" placeholder="COUNTRY&#42;" autofocus><br>
+     <br>
+   </form>
+   </section>
+
+   <section class="contact-form3">
+  <form action="">
+
+   <input type="text" name="subject" placeholder="SUBJECT&#42;" autofocus><br>
+   <br>
+
+   <textarea name="message" placeholder="YOUR MESSAGE&#42;"></textarea><br>
+   <br>
+
+   <input type="submit" value="SEND">
+ </form>
   </main>
   <footer>
     <nav class="footer-navigation">
       <ul>
-        <li><a href="mailto:giwaisaac@hotmail.com" target="hotmail">email</a></li>
-        <li><a href="https://www.facebook.com/nasir.isaac" target="facebook">facebook</a></li>
-        <li><a href="https://twitter.com/IsaacVeeG" target="twitter">twitter</a></li>
+        <li><a href="mailto:giwaisaac@hotmail.com" target="hotmail">EMAIL</a></li>
+        <li><a href="https://www.facebook.com/nasir.isaac" target="facebook">FACEBOOK</a></li>
+        <li><a href="https://twitter.com/IsaacVeeG" target="twitter">TWITTER</a></li>
       </ul>
     </nav>
   </footer>
