added 4 new images to to the image folder. created a new about css file that was used in styling the about html file. Concluded styling index html,about html, and contact html, alongside modifying the main css and the contact css files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +21,7 @@
     </header>
   </div>
 <main>
-   <section>
+   <section class="Welcome">
       <h2>Welcome</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -29,9 +29,27 @@
         dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
    </section>
-   <aside>
+   <aside class="aside">
      <h3>Projects</h3>
+     <p>
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+       dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+       proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+     </p>
+     <p>
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+       dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+       proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+     </p>
      <nav class="aside-navigation">
         <ul>
           <li><a href="https://www.raf.mod.uk/aircadets/" target="raf">Air Training Corps</a></li>
@@ -44,9 +62,9 @@
   <footer>
     <nav class="footer-navigation">
       <ul>
-        <li><a href="mailto:giwaisaac@hotmail.com" target="hotmail">email</a></li>
-        <li><a href="https://www.facebook.com/nasir.isaac" target="facebook">facebook</a></li>
-        <li><a href="https://twitter.com/IsaacVeeG" target="twitter">twitter</a></li>
+        <li><a href="mailto:giwaisaac@hotmail.com" target="hotmail">EMAIL</a></li>
+        <li><a href="https://www.facebook.com/nasir.isaac" target="facebook">FACEBOOK</a></li>
+        <li><a href="https://twitter.com/IsaacVeeG" target="twitter">TWITTER</a></li>
       </ul>
     </nav>
   </footer>
