--- a/contact.html
+++ b/contact.html
@@ -34,13 +34,13 @@
   </section>
    <section class="contact-form1">
       <h3>CONTACT FORM</h3>
-      <form action="">
+      <form action="communication">
 
       <!-- <label for="firstname">name</label> -->
-      <input type="text" name="Name" placeholder="FIRST NAME&#42;" autofocus><br>
+      <input type="text" name="Name" placeholder="FIRST NAME&#42;"><br>
       <br>
       <!-- <label for="firstname">e-mail</label> -->
-      <input type="text" name="e-mail" placeholder="EMAIL ADDRESS&#42;" autofocus><br>
+      <input type="text" name="e-mail" placeholder="EMAIL ADDRESS&#42;"><br>
       <br>
 
       <!-- <label for="firstname">subject</label> -->
@@ -50,23 +50,23 @@
       <!--<input type="checkbox" Name="news" checked>
       <label for="news"> newsletter subscription</label><br>
       <br> -->
-
   </form>
    </section>
 
    <section class="contact-form2">
-     <form action="">
-     <input type="text" name="Name" placeholder="LAST NAME&#42;" autofocus><br>
+
+     <form action="communication">
+     <input type="text" name="Name" placeholder="LAST NAME&#42;"><br>
      <br>
-     <input type="text" name="country" placeholder="COUNTRY&#42;" autofocus><br>
-     <br>
+     <input type="text" name="country" placeholder="COUNTRY&#42;"><br>
    </form>
    </section>
 
    <section class="contact-form3">
-  <form action="">
 
-   <input type="text" name="subject" placeholder="SUBJECT&#42;" autofocus><br>
+  <form action="communication">
+
+   <input type="text" name="subject" placeholder="SUBJECT&#42;"><br>
    <br>
 
    <textarea name="message" placeholder="YOUR MESSAGE&#42;"></textarea><br>
@@ -74,6 +74,8 @@
 
    <input type="submit" value="SEND">
  </form>
+ </section>
+
   </main>
   <footer>
     <nav class="footer-navigation">
