transfered the styling codes from about css and contact css to main css. Also, nullified links in both about html and contact html that were connecting them to their respective css files. Both about css and contact css have been removed. created new class attributes in index html, about html, and in contact html

--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Isaac's Portfolio</title>
   <link rel="stylesheet" href="styles/main.css" type="text/css">
-  <link rel="stylesheet" href="styles/about.css" type="text/css">
+  <!--<link rel="stylesheet" href="styles/about.css" type="text/css"> -->
 </head>
-<body>
+<body class="about">
     <div class="wrapper">
      <header class="site-header">
       <nav class="site-navigation">
@@ -78,7 +78,7 @@
      </nav>
    </section>
   </main>
-  <footer>
+  <footer class="footer-about">
     <nav class="footer-navigation">
       <ul>
         <li><a href="mailto:giwaisaac@hotmail.com" target="hotmail">EMAIL</a></li>
