--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Isaac's Portfolio</title>
   <link rel="stylesheet" href="styles/main.css" type="text/css">
-  <link rel="stylesheet" href="styles/contact.css">
+  <!-- <link rel="stylesheet" href="styles/contact.css"> -->
 </head>
-<body>
+<body class="contact">
     <div class="wrapper">
      <header class="site-header">
       <nav class="site-navigation">
@@ -77,7 +77,7 @@
  </section>
 
   </main>
-  <footer>
+  <footer class="footer-contact">
     <nav class="footer-navigation">
       <ul>
         <li><a href="mailto:giwaisaac@hotmail.com" target="hotmail">EMAIL</a></li>
