--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Isaac's Portfolio</title>
   <link rel="stylesheet" href="styles/main.css" type="text/css">
 </head>
-<body>
+<body class="index">
     <div class="wrapper">
      <header class="site-header">
       <nav class="site-navigation">
@@ -59,7 +59,7 @@
      </nav>
     </aside>
   </main>
-  <footer>
+  <footer class="footer-index">
     <nav class="footer-navigation">
       <ul>
         <li><a href="mailto:giwaisaac@hotmail.com" target="hotmail">EMAIL</a></li>
